kubernetes/applications/wakapi/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wakapi
  namespace: apps
spec:
  selector:
    matchLabels:
      app: wakapi
  strategy:
    type: Recreate
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: wakapi
    spec:
      containers:
        - name: wakapi
          image: ghcr.io/muety/wakapi:2.18.1@sha256:e761af46c49ea381ceccbb6643ebc5ca5a644efc4ca5bf5b56ed01ca16808c25
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            limits:
              cpu: 50m
              memory: 500Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: wakapi
