kubernetes/applications/wakapi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wakapi
  namespace: apps
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: wakapi
